# eter-agent

./: .gitignore  COOLIFY_DEPLOY.md  README.md
archieve/: AI_IT_Team_Notes.md  AI_IT_Team_Setup_Checklist.md  Railway_App_Specification.md
backend/: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  Procfile  RAILWAY_DEPLOY.md  README.md  pyproject.toml  railway.json  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  handlers.py  heartbeat.py  main.py  models.py  room.py  schemas.py  ws.py
backend/scripts/: check_plan.py  debug_healthcheck.py  deploy_logs.py  dump_type.py  fix_port.py  fix_runtime_pip.py  fix_uvicorn_path.py  introspect.py  link_github.py  list_projects.py  poll_deploy.py  push_runtime_pip.py  push_uvicorn_fix.py  push_venv_fix.py  restore_dockerfile.py  retrigger.py  retrigger2.py  set_env.py  set_env_cli.py  set_limits.py  set_resources.py  set_root_dir.py  set_start.py  switch_to_railpack.py
backend/tests/: live_wsmoke.py  smoke_run.py  test_health.py
coordinator-backend/: hermes_http_client.py  package-lock.json  package.json  schema.sql  server.js  test_reporter.py
coordinator-backend/public/: app.js  index.css  index.html
daemon/: README.md  SOUL.md.template.py  mailbox_client.py  smoke_test.py
daemon/launchd/: com.eteragent.mailbox.plist
docs/: ARCHITECTURE.md  README.md  RUNBOOK.md  USER_PROVIDED_ITEMS.md
frontend/: README.md
