[project]
name = "eter-agent-backend"
version = "0.1.0"
description = "Mailbox coordinator backend for the eter-agent multi-department AI IT team"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "websockets>=13",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "aiosqlite>=0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.12",
  "httpx>=0.27",
  "pywebpush>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
